k8s/local.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: erp-resource
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: "local.local"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frappe-bench-erpnext
            port:
              number: 8080
